--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -24,6 +24,7 @@
     max-width: 960px;
     margin: 0 auto;
     padding: 0 20px;
+    padding-bottom: 10%;
     box-sizing: border-box; }
   .column,
   .columns {
