--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
   
   body {
     margin: 0;
-    background-color: white;
+    background-color: black;
   }
   
   article,
@@ -363,7 +363,7 @@
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #f1f1f1;
+    color: black;
     display: block;
     transition: 0.3s;
   }
