--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -116,7 +116,7 @@
     line-height: 1.6;
     font-weight: 400;
     font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #000000; }
+    color: #ffffff; }
   
   
   /* Typography
