--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #ffffff;
+    background-color: #000000;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -369,7 +369,7 @@
   }
   
   .sidenav a:hover {
-    color: #000000;
+    color: #ffffff;
   }
   
   .sidenav .closebtn {
