--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -227,7 +227,7 @@
   select {
     height: 38px;
     padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
-    background-color: #fff;
+    background-color: #313131;
     border: 1px solid #D1D1D1;
     border-radius: 4px;
     box-shadow: none;
