--- a/css/main.css
+++ b/css/main.css
@@ -391,28 +391,6 @@
     .sidenav a {font-size: 18px;}
   }
 
-  .modal {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 0;
-    overflow: hidden;
-    background-color: #313131;
-    transition: height 0.3s;
-  }
-
-  .modal-content {
-    background-color: #313131;
-    color: #ffffff;
-    padding: 20px;
-    text-align: center;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    z-index: 2;
-    opacity: 1;
-  }
-
   .container {
     padding: 20px;
     text-align: center;
@@ -427,6 +405,91 @@
     border: none;
     cursor: pointer;
     position: relative;
-    z-index: 2;
   }
 
+  /* Bottom Sheet */
+
+  .bottom-sheet {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    opacity: 0;
+    pointer-events: none;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    transition: 0.1s linear;
+  }
+  .bottom-sheet.show {
+    opacity: 1;
+    pointer-events: auto;
+  }
+  .bottom-sheet .sheet-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+    background: #000;
+  }
+  .bottom-sheet .content {
+    width: 100%;
+    position: relative;
+    background: #313131;
+    max-height: 100vh;
+    height: 50vh;
+    max-width: 1150px;
+    padding: 25px 30px;
+    transform: translateY(100%);
+    border-radius: 12px 12px 0 0;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.03);
+    transition: 0.3s ease;
+  }
+  .bottom-sheet.show .content{
+    transform: translateY(0%);
+  }
+  .bottom-sheet.dragging .content {
+    transition: none;
+  }
+  .bottom-sheet.fullscreen .content {
+    border-radius: 0;
+    overflow-y: hidden;
+  }
+  .bottom-sheet .header {
+    display: flex;
+    justify-content: center;
+  }
+  .header .drag-icon {
+    cursor: grab;
+    user-select: none;
+    padding: 15px;
+    margin-top: -15px;
+  }
+  .header .drag-icon span {
+    height: 4px;
+    width: 40px;
+    display: block;
+    background: #C7D0E1;
+    border-radius: 50px;
+  }
+  .bottom-sheet .body {
+    height: 100%;
+    overflow-y: auto;
+    padding: 15px 0 40px;
+    scrollbar-width: none;
+  }
+  .bottom-sheet .body::-webkit-scrollbar {
+    width: 0;
+  }
+  .bottom-sheet .body h2 {
+    font-size: 1.8rem;
+  }
+  .bottom-sheet .body p {
+    margin-top: 20px;
+    font-size: 1.05rem;
+  }
