--- a/css/main.css
+++ b/css/main.css
@@ -582,3 +582,13 @@
     background-color: #313131;
     color: #ffffff;
   }
+
+  #us-aqi-plot {
+    position: absolute;
+    align-items: center;
+    background-color: #fff;
+    z-index: 1;
+    min-width: 200px;
+    width: calc(1/3 * 100%);
+    height: calc(1/2 * 100%);
+  }
