--- a/css/main.css
+++ b/css/main.css
@@ -499,13 +499,14 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    width: calc(2 / 3 * 100%);
+    /* width: calc(2 / 3 * 100%); */
+    height: 400px;
     height: calc(1 / 2 * 100%);
     min-width: 300px;
   }
 
   #map {
-    height: 100%;
+    height: 400px;
     width: 100%;
   }
 
