--- a/css/main.css
+++ b/css/main.css
@@ -374,7 +374,6 @@
   }
 
   .container {
-    padding: 20px;
     text-align: center;
     z-index: 1;
   }
@@ -619,4 +618,8 @@
     min-width: 200px;
     width: calc(1/3 * 100%);
     height: calc(1/2 * 100%);
+  }
+
+  #subtitle{
+    margin-bottom: 20px
   }
