--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -24,7 +24,8 @@
     max-width: 960px;
     margin: 0 auto;
     padding: 0 20px;
-    padding-bottom: 10%;
+    padding-bottom: 20px;
+    padding-top: 20px;
     box-sizing: border-box; }
   .column,
   .columns {
