--- a/css/main.css
+++ b/css/main.css
@@ -521,6 +521,43 @@
     color: airQualityColorClass;
   }
 
+  .info-window {
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    width: 200px;
+  }
+
+  .green {
+    background-color: green;
+    color: white;
+  }
+
+  .yellow {
+    background-color: yellow;
+    color: black;
+  }
+
+  .orange {
+    background-color: orange;
+    color: white;
+  }
+
+  .red {
+    background-color: red;
+    color: white;
+  }
+
+  .purple {
+    background-color: purple;
+    color: white;
+  }
+
+  .brown {
+    background-color: maroon;
+    color: white;
+  }
+
  #data-table{
     width: 80%;
     border-collapse: collapse;
@@ -613,13 +650,23 @@
   #us-aqi-plot {
     position: absolute;
     align-items: center;
-    background-color: #fff;
     z-index: 1;
     min-width: 200px;
-    width: calc(1/3 * 100%);
-    height: calc(1/2 * 100%);
+    height: 400px;
+    width: 100%;
+    padding-bottom: 20px;
   }
 
   #subtitle{
     margin-bottom: 20px
+  }
+
+  #graph-type {
+    position: relative;
+    top: 10px;
+    bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1;
+    min-width: 200px;
   }
