--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -318,7 +318,9 @@
   td {
     padding: 12px 15px;
     text-align: left;
-    border-bottom: 1px solid #E1E1E1; }
+    border-bottom: 1px solid #E1E1E1;
+    text-align: center; 
+  }
   th:first-child,
   td:first-child {
     padding-left: 0; }
