--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -339,7 +339,7 @@
   select,
   fieldset {
     margin-bottom: 1.5rem; }
-  pre,
+  /* pre,
   blockquote,
   dl,
   figure,
@@ -348,7 +348,7 @@
   ul,
   ol,
   form {
-    margin-bottom: 2.5rem; }
+    margin-bottom: 2.5rem; } */
   
   
   /* Utilities
