--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -117,7 +117,7 @@
     line-height: 1.6;
     font-weight: 400;
     font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #3A4D39; }
+    color: #ffffff; }
   
   
   /* Typography
