--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
   
   body {
     margin: 0;
-    background-color: #ECE3CE;
+    background-color: #313131;
   }
   
   article,
@@ -335,7 +335,7 @@
     z-index: 3;
     top: 0;
     left: 0;
-    background-color: #ECE3CE;
+    background-color: #313131;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -346,13 +346,13 @@
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #3A4D39;
+    color: white;
     display: block;
     transition: 0.3s;
   }
   
   .sidenav a:hover {
-    color: #3A4D39;
+    color: #ffffff;
   }
   
   .sidenav .closebtn {
@@ -381,8 +381,8 @@
   button {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #ECE3CE;
-    color: #3A4D39;
+    background-color: #313131;
+    color: #ffffff;
     border: none;
     cursor: pointer;
     position: relative;
@@ -425,7 +425,7 @@
   .bottom-sheet .content {
     width: 100%;
     position: relative;
-    background: #ECE3CE;
+    background: #313131;
     max-height: 100vh;
     height: 50vh;
     max-width: 1150px;
@@ -670,48 +670,3 @@
     z-index: 1;
     min-width: 200px;
   }
-
-  /* The grid: Four equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 25%;
-  padding: 10px;
-}
-
-/* Style the images inside the grid */
-.column img {
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-.column img:hover {
-  opacity: 1;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* The expanding image container (positioning is needed to position the close button and the text) */
-
-/* Expanding image text */
-#imgtext {
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
-  color: white;
-  font-size: 20px;
-}
-
-/* Closable button inside the image */
-.closebtn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  color: white;
-  font-size: 35px;
-  cursor: pointer;
-}
